--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
             <article>
                 <div id="level">
                     <!-- Target Element -->
-                    t.
+                    This is the target element.
                 </div>
             </article>
         </section>
